httpd: add an API to get data provider status
