# httpd/schema/openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.1
 info:
   title: SFTPGo
   description: 'SFTPGo REST API'
-  version: 1.1.0
+  version: 1.2.0
 
 servers:
 - url: /api/v1
@@ -22,6 +22,33 @@ paths:
                 type: array
                 items:
                   $ref : '#/components/schemas/VersionInfo'
+  /providerstatus:
+    get:
+      tags:
+      - providerstatus
+      summary: Get data provider status
+      operationId: get_provider_status
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse'
+              example:
+                status: 200
+                message: "Alive"
+                error: ""
+        500:
+          description: Provider Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse'
+              example:
+                status: 500
+                message: ""
+                error: "Error description if any"
   /connection:
     get:
       tags:
